summative.moria.Moria.scala.error
Compilation error:
Moria:3: error: not found: value Direction
  {setDirection(Direction.EAST);avance()}
                ^Moria:4: error: not found: value Direction
if (estSurBiscuit){porteBiscuit();setDirection(Direction.WEST);while (!estSurBiscuit()){avance()};recule();poseBiscuit()}
                                               ^